# llm-rag-service

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tmp_bad.json
app/: main.py
app/api/v1/: documents.py  health.py  query.py  router.py
app/api/v1/schemas/: __init__.py  error.py  query.py
app/core/: exceptions.py  logging.py  middleware.py  request_context.py  settings.py
app/db/: base.py  engine.py  models.py
app/db/migrations/alembic/: env.py
app/db/migrations/alembic/versions/: c5e1c3a7c50c_create_documents_and_chunks_with_.py
app/infra/: redis.py  storage.py
app/rag/: reranking.py
app/rag/answering/: llm.py  rerank.py  service.py  types.py
app/rag/ingestion/: chunking.py  embeddings.py  pipeline.py
app/repos/: chunks.py  documents.py
app/workers/: arq_worker.py
bench/: query.json
bench/explain/: explain_query_cosine.txt  explain_query_cosine_jit_off.txt  query_cosine.sql  query_cosine_jit_off.sql
docs/: architecture.drawio
scripts/: vector_smoke.py
tests/: test_rerank_pipeline.py  test_reranking.py
