[project]
name = "llm-rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
  "E","F","W",      # pycodestyle/pyflakes
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # bugbear
  "SIM",            # simplify
  "C4",             # comprehensions
  "RUF"             # ruff rules
]
ignore = ["E501"] # длину строки контролим через line-length, E501 не нужен

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_error_codes = true
no_implicit_optional = true
disallow_any_generics = true

# пока нет пакетов/модулей — это ок. Когда появится app/ — включим mypy по папкам точнее.
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=app --cov-report=term-missing"
