[project]
name = "llm-rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",

  "sqlalchemy>=2.0",
  "asyncpg>=0.29",

  "alembic>=1.13",
  "pgvector>=0.2",
  "openai>=1.0",
  "pydantic-settings>=2.0",

  "arq>=0.26",
  "redis>=5.0",

  "httpx>=0.27",
  "python-json-logger>=2.0.7",

]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
  "E","F","W",      # pycodestyle/pyflakes
  "I",              # isort
  "UP",             # pyupgrade
  "B",              # bugbear
  "SIM",            # simplify
  "C4",             # comprehensions
  "RUF"             # ruff rules
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_error_codes = true
no_implicit_optional = true
disallow_any_generics = true
files = ["app", "tests"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
  "pgvector.*",
  "arq.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=app --cov-report=term-missing"

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "types-redis",
]
